VS Project Loader Extension 3.6 - August 1, 2017

  Fixes several packaging errors and adds a new chocolatey package. Runners and engines
  installed under chocolatey will see and make use of this package.

  Issues Resolved

   * 4 Change API reference to released version
   * 7 No license file in NuGet package
   * 8 Integrate chocolatey package in build script

VS Project Loader Extension 3.5 - October 6, 2016

  The first independent release of the vs-project-loader extension.

  Issues Resolved
  
   * 1 Incorrect path of dlls extracted from solution file