@@ -1,3 +1,12 @@
+VS Project Loader Extension 3.7 - August 6, 2017
+
+  Added support for new file format for .NET Core csproj files. Added .editorconfig for
+  consistency with main NUnit project.
+
+  Issues Resolved
+
+   * 11 Invalid Project Format Exception if Project is new project file format
+
 VS Project Loader Extension 3.6 - August 1, 2017
 
   Fixes several packaging errors and adds a new chocolatey package. Runners and engines
